Adding kick and punch

--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <h2>HTML Canvas</h2>
-<canvas
-  id="myCanvas"
-  height="500"
-  width="500"
-  style="border: 2px solid red"
-></canvas>
+<canvas id="myCanvas" height="500" width="500"></canvas>
+<button id="kick">Kick</button>
+<button id="punch">Punch</button>
 
 <script src="script.js"></script>
