Adding queue for actions

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h2>HTML Canvas</h2>
 <canvas id="myCanvas" height="500" width="500"></canvas>
-<button id="kick">Kick</button>
-<button id="punch">Punch</button>
+<button id="kick">Kick (Left Arrow Key)</button>
+<button id="punch">Punch (Right Arrow Key)</button>
 
 <script src="script.js"></script>
