--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
-<h2>HTML Canvas</h2>
-<canvas id="myCanvas" height="500" width="500"></canvas>
-<button id="kick">Kick (Left Arrow Key)</button>
-<button id="punch">Punch (Right Arrow Key)</button>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Martial Arts Sim</title>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <canvas id="myCanvas" class="canvas" height="500" width="500"></canvas>
+    <div class="button-container">
+      <button class="button" id="kick">Kick (Spacebar)</button>
+      <button class="button" id="forward">Forward (W)</button>
+      <button class="button" id="backward">Backward (A)</button>
+      <button class="button" id="block">Block (S)</button>
+      <button class="button" id="punch">Punch (D)</button>
+    </div>
 
-<script src="script.js"></script>
+    <script src="script.js"></script>
+  </body>
+</html>
