--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+    <h1 class="title">Martial Arts Simulator</h1>
     <canvas id="myCanvas" class="canvas" height="500" width="500"></canvas>
     <div class="button-container">
       <button class="button" id="kick">Kick (Spacebar)</button>
